# turing_mini

./: .gitignore  CPU.pdsprj  Magnitude_comparator.circ  Readme.md  binary_counter.circ  compiler.py  cpu_gui.py  d_latch.circ  emul4b.py  full_adder_substractor.circ  mem_viewer.py  register.circ
KiCAD/Register_file/: Register_file.kicad_prl  Register_file.kicad_pro  Register_file.kicad_sch  ~Register_file.kicad_pcb.lck
emulator/: CMakeLists.txt  check_dll.py  cpu_gui.py  dll_wrapper.py  emulator.py  test.py
emulator/API/: api.h  api.py  device_api.h  emulator_api.h
emulator/devices/address_decoder/: CMakeLists.txt  address_decoder.c
emulator/devices/clock/: CMakeLists.txt  clock.c  clock.h  clock_header.h
emulator/devices/dummy/: CMakeLists.txt  dummy.c  dummy.h  readme.md
emulator/devices/memory/: CMakeLists.txt  memory.c  memory.h
emulator/lib/: utils.h
emulator/tests/: CMakeLists.txt  test_clock.py
emulator/tests/test_clock/: CMakeLists.txt  main.c
